--- a/css/vars.css
+++ b/css/vars.css
@@ -19,6 +19,8 @@
 
     --red-border: 1px solid red;
     --blue-border: 1px solid blue;
+
+    --title-font-weight: 900;
 }
 
 @media (min-width: 768px) {
